kube/media/qbittorrent/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-lan
  namespace: media
  annotations:
    metallb.io/loadBalancerIPs: "192.168.1.225"
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
  - name: http
    port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-tcp
  namespace: media
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
  - name: http
    port: 8080
  - name: torrent-tcp
    port: 6881
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-udp
  namespace: media
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
  - name: torrent-udp
    port: 6881
    protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - qbittorrent.matthew-stratton.me
    secretName: qbittorrent-tls
  rules:
  - host: qbittorrent.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: qbittorrent-tcp
            port:
              number: 8080
        path: /
        pathType: Prefix
